added correct assigns

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "esprima": "^4.0.1",
     "prettier": "^2.0.5",
     "webpack": "^4.0.0",
-    "tmp": "^0.2.1"
+    "tmp": "^0.2.1",
+    "aws-sdk": "latest"
   }
 }
